--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ small {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    margin: 0% 0% 0% 10%;
+    margin: 0% 0% 0% 0%;
 }
 
 .sitio-nombre {
@@ -66,23 +66,21 @@ small {
     padding-left: 3%;
 }
 
-
 .nav-header {
     border: 10px solid #000000;
-    border-radius: 30px;    
+    border-radius: 30px;
     align-self: center;
     background: #1f2322;
-    margin-right: 20%;
-    flex: 2;
-    width: 20%;
+    margin-right: 13%;
+    flex: 0.8%;
 }
 
 .nav-top {
     margin: 0;
     list-style-type: none;
     overflow: hidden;
-    padding-right: 0%;
-    padding-left: 8%;
+    padding-right: 0;
+    padding-left: 11.5%;
     margin-right: 0%;
     height: 20%;
 }
@@ -142,9 +140,8 @@ small {
 .publicidad-descripcion {
     flex: 3;
     align-self: center;
-    margin-right: -6%;
-
     padding-right: 10%;
+    margin-left: 9%;
 }
 
 .publicidad-text p {
